[project]
name = "esignbase-sdk"
version = "1.1.0"
license = "MIT"
license-files = ["LICENSE"]
description = "Python SDK for eSignBase – eIDAS-compliant digital signatures and GDPR-ready electronic signing via REST API."
authors = [{ name = "Matthias Meß", email = "info@esignbase.com" }]
readme = "README.md"
requires-python = ">=3.10,<4.0"

keywords = [
  "digital signature",
  "electronic signature",
  "eIDAS",
  "GDPR",
  "REST API",
  "document signing",
  "e-signature",
  "legal signature",
  "EU compliance",
  "python sdk"
]


classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Security :: Cryptography",
  "Topic :: Office/Business"
]

dependencies = [
  "requests>=2.25.0,<3.0.0",
]

[project.urls]
Homepage = "https://esignbase.com"
Documentation = "https://esignbase.com/en/api_documentation/"
Source = "https://github.com/matt-the-midnight-hacker/esignbase-python-sdk"

[project.optional-dependencies]
dev = [
  "pylint",
  "black",
  "isort",
  "pyright",
]

[tool.black]
line-length = 100
target-version = ['py314']

[tool.isort]
profile = "black"
line_length = 100
known_first_party = []
classes = ["IO"]
